--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-dom": "^18"
   },
   "devDependencies": {
+    "@types/jest": "^27.4.1",
     "@types/node": "^20",
     "@types/react": "^18.2.28",
     "@types/react-auth-kit": "^1.2.1",
