--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   },
   "devDependencies": {
     "@types/jest": "^27.4.1",
+    "@types/jquery": "^3.5.25",
     "@types/node": "^20",
     "@types/react": "^18.2.28",
     "@types/react-auth-kit": "^1.2.1",
