--- a/package.json
+++ b/package.json
@@ -15,10 +15,13 @@
     "@heroicons/react": "^2.0.18",
     "@mui/icons-material": "^5.14.13",
     "@mui/material": "^5.14.13",
+    "chart.js": "^4.4.0",
     "next": "13.5.4",
     "next-auth": "^4.23.2",
+    "primereact": "^10.0.9",
     "react": "^18",
     "react-auth-kit": "^3.0.0-alpha.15",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18"
   },
   "devDependencies": {
