--- a/package.json
+++ b/package.json
@@ -15,14 +15,17 @@
     "@heroicons/react": "^2.0.18",
     "@mui/icons-material": "^5.14.13",
     "@mui/material": "^5.14.13",
+    "@tanstack/react-query": "^5.7.0",
     "chart.js": "^4.4.0",
+    "moment": "^2.29.4",
     "next": "13.5.4",
     "next-auth": "^4.23.2",
     "primereact": "^10.0.9",
     "react": "^18",
     "react-auth-kit": "^3.0.0-alpha.15",
     "react-chartjs-2": "^5.2.0",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-infinite-scroller": "^1.2.6"
   },
   "devDependencies": {
     "@types/jest": "^27.4.1",
@@ -31,6 +34,7 @@
     "@types/react": "^18.2.28",
     "@types/react-auth-kit": "^1.2.1",
     "@types/react-dom": "^18",
+    "@types/react-infinite-scroller": "^1.2.4",
     "autoprefixer": "^10",
     "postcss": "^8",
     "tailwindcss": "^3",
