--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emoji-mart/data": "^1.1.2",
+    "@emoji-mart/react": "^1.1.1",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@headlessui/react": "^1.7.17",
@@ -17,6 +19,7 @@
     "@mui/material": "^5.14.13",
     "@tanstack/react-query": "^5.7.0",
     "chart.js": "^4.4.0",
+    "emoji-mart": "^5.5.2",
     "moment": "^2.29.4",
     "next": "13.5.4",
     "next-auth": "^4.23.2",
