--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "@mui/icons-material": "^5.14.13",
     "@mui/material": "^5.14.13",
     "@tanstack/react-query": "^5.7.0",
+    "ajax": "^0.0.4",
     "chart.js": "^4.4.0",
     "emoji-mart": "^5.5.2",
+    "jquery": "^3.7.1",
     "moment": "^2.29.4",
     "next": "13.5.4",
     "next-auth": "^4.23.2",
