--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@headlessui/react": "^1.7.17",
     "@heroicons/react": "^2.0.18",
+    "@material-tailwind/react": "^2.1.4",
     "@mui/icons-material": "^5.14.13",
     "@mui/material": "^5.14.13",
     "@tanstack/react-query": "^5.7.0",
