--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@material-tailwind/react": "^2.1.4",
     "@mui/icons-material": "^5.14.13",
     "@mui/material": "^5.14.13",
+    "@mui/x-charts": "^6.18.1",
     "@tanstack/react-query": "^5.7.0",
     "ajax": "^0.0.4",
     "chart.js": "^4.4.0",
