--- a/package.json
+++ b/package.json
@@ -41,7 +41,8 @@
     "react-dom": "^18",
     "react-infinite-scroller": "^1.2.6",
     "rxjs": "^7.8.1",
-    "rxjs-compat": "^6.6.7"
+    "rxjs-compat": "^6.6.7",
+    "socket.io-client": "^4.7.2"
   },
   "devDependencies": {
     "@types/jest": "^27.4.1",
