--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@tanstack/react-query": "^5.7.0",
     "@types/google.maps": "^3.54.9",
     "ajax": "^0.0.4",
+    "bufferutil": "^4.0.8",
     "chart.js": "^4.4.0",
     "emoji-mart": "^5.5.2",
     "google-maps": "^4.3.3",
@@ -42,7 +43,9 @@
     "react-infinite-scroller": "^1.2.6",
     "rxjs": "^7.8.1",
     "rxjs-compat": "^6.6.7",
-    "socket.io-client": "^4.7.2"
+    "socket.io-client": "^4.7.2",
+    "utf-8-validate": "^5.0.10",
+    "ws": "^8.14.2"
   },
   "devDependencies": {
     "@types/jest": "^27.4.1",
