--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18",
     "react-infinite-scroller": "^1.2.6",
+    "react-toastify": "^9.1.3",
     "rxjs": "^7.8.1",
     "rxjs-compat": "^6.6.7",
     "socket.io-client": "^4.7.2",
