--- a/package.json
+++ b/package.json
@@ -57,8 +57,10 @@
     "@types/react-dom": "^18",
     "@types/react-infinite-scroller": "^1.2.4",
     "autoprefixer": "^10",
+    "file-loader": "^6.2.0",
     "postcss": "^8",
     "tailwindcss": "^3",
-    "typescript": "^5"
+    "typescript": "^5",
+    "url-loader": "^4.1.1"
   }
 }
