--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,6 +22,14 @@
       "@/*": ["./src/*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "src/app/useSocketio.js", "src/context/socketio.context.js"],
+  "include": [
+    "next-env.d.ts",
+    "index.d.ts",
+    "**/*.ts",
+    "**/*.tsx",
+    ".next/types/**/*.ts",
+    "src/app/useSocketio.js",
+    "src/context/socketio.context.js"
+  ],
   "exclude": ["node_modules"]
 }
