--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@react-google-maps/api": "^2.19.2",
     "@tanstack/react-query": "^5.7.0",
     "@types/google.maps": "^3.54.9",
+    "@types/socket.io-client": "^3.0.0",
     "ajax": "^0.0.4",
     "bufferutil": "^4.0.8",
     "chart.js": "^4.4.0",
@@ -56,11 +57,12 @@
     "@types/react-auth-kit": "^1.2.1",
     "@types/react-dom": "^18",
     "@types/react-infinite-scroller": "^1.2.4",
+    "@types/socket.io": "^3.0.2",
     "autoprefixer": "^10",
     "file-loader": "^6.2.0",
     "postcss": "^8",
     "tailwindcss": "^3",
-    "typescript": "^5",
+    "typescript": "^5.3.3",
     "url-loader": "^4.1.1"
   }
 }
