--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "react-toastify": "^9.1.3",
     "rxjs": "^7.8.1",
     "rxjs-compat": "^6.6.7",
+    "sharp": "^0.33.2",
     "socket.io-client": "^4.7.2",
     "utf-8-validate": "^5.0.10",
     "ws": "^8.14.2"
