--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "ajax": "^0.0.4",
     "bufferutil": "^4.0.8",
     "chart.js": "^4.4.0",
+    "contexts": "^0.0.0",
     "emoji-mart": "^5.5.2",
     "google-maps": "^4.3.3",
     "jquery": "^3.7.1",
@@ -43,6 +44,7 @@
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18",
     "react-infinite-scroller": "^1.2.6",
+    "react-rsc": "^0.0.0",
     "react-toastify": "^9.1.3",
     "rxjs": "^7.8.1",
     "rxjs-compat": "^6.6.7",
